@@ -1,0 +1,6 @@
+#include <iostream>
+
+int main()
+{
+  std::cout << "hello world" << std::endl;
+}
