@@ -1,0 +1,15 @@
+This is a simple empty main() example. This example can be built for
+several Linux and standalone targets. Type "make help" to see the
+available target configurations.
+
+The goal of this example is to be able to debug , set a breakpoint at main()
+and verify that the startup code gets us there.
+
+Currently supported configuration(s):
+Linux:
+  armeb-linux-engeabi armeb-linux-engeabihf arm-linux-engeabi
+  arm-linux-engeabihf i386-linux-eng microblaze-linux-eng mipsel-linux-eng
+  mipsel-linux-engsf mips-linux-eng mips-linux-engsf ppc-linux-eng
+  x86_64-linux-eng
+ELK:
+  arm-elk-engeabi
