@@ -1,0 +1,4 @@
+/* Choose elk features to pull in. */
+
+EXTERN(__elk_exit)
+
